--- a/src/index.html
+++ b/src/index.html
@@ -1,106 +1,98 @@
+// src/index.html
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <title>ProblemCutter + TestMaker</title>
-    <link rel="stylesheet" href="styles.css" />
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        padding: 20px;
+      }
+      .container {
+        max-width: 800px;
+        margin: 0 auto;
+      }
+      .section {
+        margin-bottom: 20px;
+        padding: 15px;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+      }
+      .input-group {
+        margin-bottom: 10px;
+      }
+      label {
+        display: inline-block;
+        width: 120px;
+      }
+      input,
+      select {
+        margin-right: 10px;
+      }
+      button {
+        margin: 5px;
+        padding: 5px 10px;
+      }
+      #logArea {
+        width: 100%;
+        height: 200px;
+        margin-top: 20px;
+        resize: vertical;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
-      <!-- PDF 파일 영역 -->
-      <div class="file-section">
-        <h3>PDF 파일 폴더</h3>
-        <div class="path-control">
-          <input type="text" class="path-input" id="pdfPath" value="./pdfs" />
-          <div class="button-group">
-            <button onclick="updateList('pdf')">새로고침</button>
-            <button onclick="openFolder('pdf')">열기</button>
-          </div>
+      <!-- PDF 섹션 -->
+      <div class="section">
+        <h3>PDF 처리</h3>
+        <div class="input-group">
+          <label>PDF 디렉토리:</label>
+          <input type="text" id="pdfPath" value="./pdfs" />
+          <button id="refreshPdfBtn">새로고침</button>
+          <button id="openPdfDirBtn">폴더 열기</button>
         </div>
-        <select multiple id="pdfList" class="file-list"></select>
-        <div class="button-group">
-          <button onclick="toggleSelectAll('pdf')">전체 선택</button>
-          <button onclick="deleteSelected('pdf')" class="delete-btn">
-            삭제
-          </button>
-        </div>
-      </div>
-
-      <!-- PC 설정 영역 -->
-      <div class="settings-section">
-        <div class="pc-settings">
-          <div class="setting-item">
-            <label>해상도 배율:</label>
-            <input type="number" id="resolution" value="2" min="1" max="4" />
-          </div>
-          <div class="setting-item">
-            <label>여백:</label>
-            <input type="number" id="margin" value="8" min="0" max="20" />
-          </div>
-          <button onclick="processPDF()" class="process-btn">→</button>
+        <select
+          multiple
+          id="pdfList"
+          style="width: 100%; height: 100px"></select>
+        <div>
+          <label>해상도:</label>
+          <input type="number" id="resolution" value="2" min="1" max="4" />
+          <label>여백:</label>
+          <input type="number" id="margin" value="8" min="0" max="20" />
+          <button id="processPdfBtn">PDF 처리</button>
         </div>
       </div>
 
-      <!-- 이미지 파일 영역 -->
-      <div class="file-section">
-        <h3>이미지 파일 폴더</h3>
-        <div class="path-control">
-          <input type="text" class="path-input" id="imgPath" value="./imgs" />
-          <div class="button-group">
-            <button onclick="updateList('img')">새로고침</button>
-            <button onclick="openFolder('img')">열기</button>
-          </div>
+      <!-- 이미지 섹션 -->
+      <div class="section">
+        <h3>이미지 처리</h3>
+        <div class="input-group">
+          <label>이미지 디렉토리:</label>
+          <input type="text" id="imgPath" value="./imgs" />
+          <button id="refreshImgBtn">새로고침</button>
+          <button id="openImgDirBtn">폴더 열기</button>
         </div>
-        <select multiple id="imgList" class="file-list"></select>
-        <div class="button-group">
-          <button onclick="toggleSelectAll('img')">전체 선택</button>
-          <button onclick="deleteSelected('img')" class="delete-btn">
-            삭제
-          </button>
-          <button onclick="previewImages()" class="preview-btn">프리뷰</button>
-        </div>
-      </div>
-
-      <!-- TM 설정 영역 -->
-      <div class="settings-section">
-        <div class="tm-settings">
-          <div class="setting-item">
-            <label>시험 시간(분):</label>
-            <input type="number" id="timeLimit" value="75" min="1" />
-          </div>
-          <div class="setting-item">
-            <label>선지 섞기:</label>
-            <input type="checkbox" id="shuffleChoices" checked />
-          </div>
-          <button onclick="processImages()" class="process-btn">→</button>
+        <select
+          multiple
+          id="imgList"
+          style="width: 100%; height: 100px"></select>
+        <div>
+          <label>시험 시간(분):</label>
+          <input type="number" id="timeLimit" value="75" min="1" />
+          <label>선지 섞기:</label>
+          <input type="checkbox" id="shuffleChoices" checked />
+          <button id="processImgBtn">이미지 처리</button>
         </div>
       </div>
 
-      <!-- ZIP 파일 영역 -->
-      <div class="file-section">
-        <h3>테스트 파일 폴더</h3>
-        <div class="path-control">
-          <input type="text" class="path-input" id="zipPath" value="./tests" />
-          <div class="button-group">
-            <button onclick="updateList('zip')">새로고침</button>
-            <button onclick="openFolder('zip')">열기</button>
-          </div>
-        </div>
-        <select multiple id="zipList" class="file-list"></select>
-        <div class="button-group">
-          <button onclick="toggleSelectAll('zip')">전체 선택</button>
-          <button onclick="deleteSelected('zip')" class="delete-btn">
-            삭제
-          </button>
-        </div>
-      </div>
-
-      <!-- 로그 영역 -->
-      <div class="log-section">
+      <!-- 로그 섹션 -->
+      <div class="section">
         <textarea id="logArea" readonly></textarea>
-        <button onclick="clearLog()" class="clear-btn">로그 초기화</button>
+        <button id="clearLogBtn">로그 초기화</button>
       </div>
     </div>
-    <script src="renderer.js"></script>
   </body>
 </html>
