--- a/src/index.html
+++ b/src/index.html
@@ -1,98 +1,58 @@
-// src/index.html
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>ProblemCutter + TestMaker</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        padding: 20px;
-      }
-      .container {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-      .section {
-        margin-bottom: 20px;
-        padding: 15px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-      }
-      .input-group {
-        margin-bottom: 10px;
-      }
-      label {
-        display: inline-block;
-        width: 120px;
-      }
-      input,
-      select {
-        margin-right: 10px;
-      }
-      button {
-        margin: 5px;
-        padding: 5px 10px;
-      }
-      #logArea {
-        width: 100%;
-        height: 200px;
-        margin-top: 20px;
-        resize: vertical;
-      }
-    </style>
+    <title>Problem Test Maker</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
       <!-- PDF 섹션 -->
-      <div class="section">
-        <h3>PDF 처리</h3>
-        <div class="input-group">
-          <label>PDF 디렉토리:</label>
+      <section>
+        <h2>PDF 처리</h2>
+        <div>
+          <label>PDF 폴더:</label>
           <input type="text" id="pdfPath" value="./pdfs" />
-          <button id="refreshPdfBtn">새로고침</button>
-          <button id="openPdfDirBtn">폴더 열기</button>
+          <button onclick="updateList('pdf')">새로고침</button>
+          <button onclick="openFolder('pdf')">폴더 열기</button>
         </div>
-        <select
-          multiple
-          id="pdfList"
-          style="width: 100%; height: 100px"></select>
+        <select multiple id="pdfList"></select>
         <div>
           <label>해상도:</label>
           <input type="number" id="resolution" value="2" min="1" max="4" />
           <label>여백:</label>
           <input type="number" id="margin" value="8" min="0" max="20" />
-          <button id="processPdfBtn">PDF 처리</button>
+          <button onclick="processPDF()">PDF 처리</button>
+          <button onclick="deleteSelected('pdf')">선택 삭제</button>
         </div>
-      </div>
+      </section>
 
       <!-- 이미지 섹션 -->
-      <div class="section">
-        <h3>이미지 처리</h3>
-        <div class="input-group">
-          <label>이미지 디렉토리:</label>
+      <section>
+        <h2>이미지 처리</h2>
+        <div>
+          <label>이미지 폴더:</label>
           <input type="text" id="imgPath" value="./imgs" />
-          <button id="refreshImgBtn">새로고침</button>
-          <button id="openImgDirBtn">폴더 열기</button>
+          <button onclick="updateList('img')">새로고침</button>
+          <button onclick="openFolder('img')">폴더 열기</button>
         </div>
-        <select
-          multiple
-          id="imgList"
-          style="width: 100%; height: 100px"></select>
+        <select multiple id="imgList"></select>
         <div>
           <label>시험 시간(분):</label>
           <input type="number" id="timeLimit" value="75" min="1" />
           <label>선지 섞기:</label>
           <input type="checkbox" id="shuffleChoices" checked />
-          <button id="processImgBtn">이미지 처리</button>
+          <button onclick="processImages()">이미지 처리</button>
+          <button onclick="deleteSelected('img')">선택 삭제</button>
         </div>
-      </div>
+      </section>
 
       <!-- 로그 섹션 -->
-      <div class="section">
+      <section>
         <textarea id="logArea" readonly></textarea>
-        <button id="clearLogBtn">로그 초기화</button>
-      </div>
+        <button onclick="clearLog()">로그 지우기</button>
+      </section>
     </div>
+    <script src="renderer.js"></script>
   </body>
 </html>
