--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,11 @@
             <input type="number" id="timeLimit" value="75" min="1" />
           </div>
           <div class="setting-group">
+            <label>문제 수:</label>
+            <input type="number" id="questionCount" value="0" min="0" />
+            <small>0 = 전체 문제</small>
+          </div>
+          <div class="setting-group">
             <label>
               <input type="checkbox" id="shuffleChoices" checked />
               선지 섞기
